# spacetagram

./: README.md  manage.py  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_favorites_name.py  0003_remove_favorites_name.py  0004_alter_favorites_id.py  0005_auto_20210916_2153.py  0006_auto_20210916_2155.py  0007_alter_favorites_id.py
spacetagram/: asgi.py  settings.py  urls.py  wsgi.py
static/: base.css  likeAction.js
staticfiles/: base.css  likeAction.js
templates/: homepage.html
